--- a/Source/DDW.Web/Web.config
+++ b/Source/DDW.Web/Web.config
@@ -10,7 +10,7 @@
          connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|aspnetdb.mdf;User Instance=true"
          providerName="System.Data.SqlClient" />
   </connectionStrings>
-
+ 
   <appSettings>
     <add key="webpages:Version" value="1.0.0.0"/>
     <add key="ClientValidationEnabled" value="true"/>
@@ -18,6 +18,7 @@
   </appSettings>
 
   <system.web>
+    <globalization uiCulture="auto:nl-BE" culture="auto:nl-BE" requestEncoding="utf-8" responseEncoding="utf-8" />
     <compilation debug="true" targetFramework="4.0">
       <assemblies>
         <add assembly="System.Web.Abstractions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
