--- a/Source/packages/repositories.config
+++ b/Source/packages/repositories.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\DDW.Web.Tests\packages.config" />
   <repository path="..\DDW.Web\packages.config" />
 </repositories>
