--- a/Source/DDW.Web.Tests/packages.config
+++ b/Source/DDW.Web.Tests/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="mongocsharpdriver" version="1.7.1" targetFramework="net40" />
   <package id="NUnit" version="2.6.1" />
 </packages>
